test/memory/shannon/memmaxExceeds.good
memmaxExceeds.chpl:14: error: Exceeded memory limit
